--- a/index.css
+++ b/index.css
@@ -12,18 +12,8 @@ header {
   padding-bottom: 2.8rem;
   margin: auto;
 }
-/*navgation  Start*/
 
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 106%;
-  margin-left: -31px;
-  height: 80px;
-  font-size: 110%;
-  z-index: 100;
-}
+/*navgation  Start*/
 
 .sticky__nav {
   top: 0;
@@ -32,86 +22,85 @@ nav {
   position: fixed;
   width: 100%;
   z-index: 1;
+  margin-left: -10px;
 }
 
+nav {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
 .nav__logo {
-  display: block;
-  width: 150px;
-  height: 45%;
-  float: left;
-  margin-top: -2px;
-  margin-left: 50px;
+  width: 20%;
+  margin: auto;
 }
 ul {
+  font-size: 0.9em;
   display: flex;
   align-items: center;
   justify-content: flex-end;
   width: 80%;
-  text-decoration: none;
-  margin: none;
+  box-sizing: border-box;
 }
 li {
   list-style: none;
-  float: right;
-  margin: none;
-  margin-top: 0px;
+  margin-right: 10px;
+  box-sizing: border-box;
 }
-
-.nav__item > a {
-  text-decoration: none;
-  margin: 0 1rem;
-  color: #444449;
-  display: block;
-}
-
-.nav__link--btn,
-.btn {
-  padding: 1rem 1.5rem;
-  background-color: #5ec576;
-  border-radius: 1.8em;
-  line-height: 25px;
-}
-
-.nav__link--btn {
-  text-align: center;
-  padding: 0.5rem;
-  width: 6rem;
-}
-
-.nav__log--in {
-  padding: 1.2rem 1rem;
+a {
   text-decoration: none;
   color: black;
-  width: clamp(3rem, 4rem, 6rem);
+}
+.link {
+  background-color: #04d435;
+  padding: 2.5%;
+  border-radius: 1.1rem;
 }
 
 .btn:hover,
-.nav__link--btn:hover {
+.link:hover {
   background-color: #14c03c;
 }
 
 /* navigation End */
 
 /*header title start */
+
 .header__title {
-  margin: auto;
-  font-size: 92%;
+  padding: 9% 0;
+  padding-bottom: 11%;
+  /* height: 95vh; */
 }
 
 h1,
 h4,
 .btn--text {
   width: 70%;
+  margin: 0%;
   display: block;
   box-sizing: border-box;
 }
 
 img.header__img {
-  width: 40vw;
+  width: clamp(200px, 50%, 380px);
   float: right;
-  margin-top: -25rem;
+  margin-top: -70vh;
+  margin-left: 1rem;
 }
-
+@media (min-width: 600px) {
+  img.header__img {
+    margin-top: -50vh;
+  }
+}
+@media (min-width: 1000px) {
+  img.header__img {
+    margin-top: -40vh;
+    margin-right: 8rem;
+  }
+}
 h1 {
   font-size: 400%;
   line-height: 75px;
@@ -212,6 +201,16 @@ svg {
   color: #929090;
   width: 50%;
 }
+@media (max-width: 600px) {
+  .features__feature p {
+    width: 20ch;
+  }
+}
+@media (min-width: 600px) {
+  .features__feature p {
+    width: 25ch;
+  }
+}
 
 /* End of Section 2 */
 
@@ -236,13 +235,16 @@ svg {
 
 .operations__tab-container {
   margin: auto;
-  width: 70%;
+  width: 80%;
   display: flex;
   align-content: center;
-  justify-content: space-between;
+
+  justify-content: space-around;
 }
 
 .operations__tab {
+  max-width: 150px;
+  padding: 0.5rem;
   box-sizing: border-box;
   font-size: 120%;
   border-radius: 5rem;
@@ -282,7 +284,7 @@ svg {
 }
 
 .operations__tab--active {
-  margin-top: -20px;
+  margin-top: -30px;
 }
 
 .operations__tab--1,
@@ -333,6 +335,7 @@ svg {
   height: 30%;
   display: block;
   margin-top: -7rem;
+  padding-bottom: 8rem;
 }
 
 .slide h5 {
@@ -351,7 +354,6 @@ svg {
   display: flex;
   justify-content: center;
   align-items: center;
-
   overflow: hidden;
 }
 
@@ -410,7 +412,14 @@ div > .quote1 {
   gap: 5px;
   width: 100px;
 }
-
+@media (max-width: 600px) {
+  .dots {
+    bottom: 25%;
+  }
+  .slider {
+    height: 40rem;
+  }
+}
 .dot {
   cursor: pointer;
   border: none;
