--- a/index.css
+++ b/index.css
@@ -17,12 +17,12 @@ header {
 
 .sticky__nav {
   top: 0;
+  left: 0%;
   background-color: rgba(255, 255, 255, 0.8);
-  height: 75px;
+  height: 80px;
   position: fixed;
   width: 100%;
   z-index: 1;
-  margin-left: -10px;
 }
 
 nav {
@@ -57,7 +57,7 @@ a {
 .link {
   background-color: #04d435;
   padding: 2.5%;
-  border-radius: 1.1rem;
+  border-radius: 1.5rem;
 }
 
 .btn:hover,
@@ -335,7 +335,6 @@ svg {
   height: 30%;
   display: block;
   margin-top: -7rem;
-  padding-bottom: 8rem;
 }
 
 .slide h5 {
@@ -414,7 +413,7 @@ div > .quote1 {
 }
 @media (max-width: 600px) {
   .dots {
-    bottom: 25%;
+    bottom: 33%;
   }
   .slider {
     height: 40rem;
@@ -538,18 +537,31 @@ footer {
   justify-content: space-between;
 }
 footer > ul {
-  width: 70vw;
-  height: 3rem;
-  text-align: center;
+  width: 80%;
+  padding: 0%;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+
+  box-sizing: border-box;
 }
 
 .footer__item > a,
 .footer__copyright > a {
+  text-align: center;
   text-decoration: none;
   color: white;
-  font-size: 120%;
+  font-size: 0.9rem;
+  box-sizing: border-box;
+}
+@media (min-width: 600px) {
+  footer > ul {
+    gap: 1rem;
+  }
+  .footer__item > a,
+  .footer__copyright > a {
+    font-size: 1rem;
+  }
 }
 
 footer > img {
