--- a/index.css
+++ b/index.css
@@ -29,7 +29,6 @@ nav {
   width: 100%;
   height: 80px;
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
@@ -38,12 +37,22 @@ nav {
   margin: auto;
 }
 ul {
-  font-size: 0.9em;
+  font-size: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: flex-end;
   width: 80%;
   box-sizing: border-box;
+}
+@media (min-width: 600px) {
+  ul {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 1000px) {
+  ul {
+    font-size: 1.2rem;
+  }
 }
 li {
   list-style: none;
@@ -87,22 +96,11 @@ h4,
 img.header__img {
   width: clamp(200px, 50%, 380px);
   float: right;
-  margin-top: -70vh;
+  margin-top: -130%;
   margin-left: 1rem;
 }
-@media (min-width: 600px) {
-  img.header__img {
-    margin-top: -50vh;
-  }
-}
-@media (min-width: 1000px) {
-  img.header__img {
-    margin-top: -40vh;
-    margin-right: 8rem;
-  }
-}
 h1 {
-  font-size: 400%;
+  font-size: 3rem;
   line-height: 75px;
 }
 
@@ -114,10 +112,11 @@ h1 {
 }
 
 h4 {
-  font-size: 195%;
+  font-size: 1.5rem;
   font-weight: 500;
   margin-left: 10px;
   line-height: 50px;
+  margin-bottom: 3rem;
 }
 
 .btn--text {
@@ -129,6 +128,31 @@ h4 {
   padding-bottom: 5px;
   background-color: whitesmoke;
   cursor: pointer;
+}
+
+@media (min-width: 600px) {
+  img.header__img {
+    margin-top: -50vh;
+  }
+  h1 {
+    font-size: 3.2rem;
+  }
+  h4 {
+    font-size: 2rem;
+  }
+}
+@media (min-width: 1000px) {
+  img.header__img {
+    margin-top: -40vh;
+    margin-right: 8rem;
+  }
+  h1 {
+    font-size: 5rem;
+    line-height: 8rem;
+  }
+  h4 {
+    font-size: 2.5rem;
+  }
 }
 
 /* end of header and navigation */
@@ -202,8 +226,13 @@ svg {
   width: 50%;
 }
 @media (max-width: 600px) {
+  .features {
+    gap: 3rem;
+  }
   .features__feature p {
-    width: 20ch;
+    width: 17ch;
+    line-height: 17px;
+    font-size: 0.8rem;
   }
 }
 @media (min-width: 600px) {
@@ -239,7 +268,7 @@ svg {
   display: flex;
   align-content: center;
 
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .operations__tab {
@@ -327,6 +356,28 @@ svg {
   margin-left: 80px;
   color: #444449;
 }
+@media (max-width: 600px) {
+  .operations__content {
+    font-size: 0.5rem;
+    padding: 5rem 3rem;
+    line-height: 30px;
+  }
+  .operations__content > h5 {
+    margin-left: 40px;
+  }
+  .operations__content > p {
+    margin-left: 40px;
+  }
+  .operations__icon {
+    width: 40px;
+  }
+  .operations__tab {
+    font-size: 0.7rem;
+  }
+  .operations__tab--active {
+    margin-top: -15px;
+  }
+}
 
 /* End of Section 2 */
 #section--3 {
@@ -411,14 +462,7 @@ div > .quote1 {
   gap: 5px;
   width: 100px;
 }
-@media (max-width: 600px) {
-  .dots {
-    bottom: 33%;
-  }
-  .slider {
-    height: 40rem;
-  }
-}
+
 .dot {
   cursor: pointer;
   border: none;
@@ -445,7 +489,7 @@ div > .quote1 {
 }*/
 blockquote.testimonial__text {
   font-size: 1.2rem;
-  line-height: 1.5rem;
+  line-height: 1.4rem;
 }
 
 .slider__btn {
@@ -494,6 +538,23 @@ address p {
   font-style: normal;
   font-family: "Courier New", Courier, monospace;
 }
+@media (max-width: 600px) {
+  blockquote.testimonial__text {
+    line-height: 1rem;
+    font-size: 1rem;
+    width: 25ch;
+  }
+  address {
+    margin: 0%;
+    margin-top: 2rem;
+  }
+  .dots {
+    bottom: 20%;
+  }
+  .slider {
+    height: 40rem;
+  }
+}
 
 /* End of section--2*/
 
@@ -522,6 +583,16 @@ address p {
   border-radius: 5rem;
   font-size: 120%;
 }
+@media (max-width: 600px) {
+  .section--sign-up {
+    font-size: 0.5rem;
+  }
+  .section--sign-up > button {
+    width: 50%;
+    font-size: 0.8rem;
+    height: 3rem;
+  }
+}
 
 /*end of secton 3*/
 
@@ -545,13 +616,13 @@ footer > ul {
 
   box-sizing: border-box;
 }
-
+.footer__copyright,
 .footer__item > a,
 .footer__copyright > a {
   text-align: center;
   text-decoration: none;
   color: white;
-  font-size: 0.9rem;
+  font-size: 0.5rem;
   box-sizing: border-box;
 }
 @media (min-width: 600px) {
@@ -579,7 +650,7 @@ footer > img {
   z-index: 2;
   background-color: #f3f3f3;
   width: 37rem;
-  height: 95%;
+  height: 60%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -608,16 +679,16 @@ footer > img {
 .modal__form {
   flex: 3;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 3rem;
-  margin-bottom: 3rem;
-  margin: auto;
-  margin-left: 18%;
+  grid-template-columns: 70% 1fr;
+  grid-template-rows: repeat(3, 70px);
+
   box-sizing: border-box;
 }
 
 label {
   font-size: 160%;
+  margin: 0%;
+  padding: 0%;
 }
 
 input {
@@ -675,7 +746,37 @@ input[type="email"] {
   transform: translateY(0rem);
   transition-duration: 1s;
 }
-
+@media (max-width: 600px) {
+  .modal {
+    width: 15rem;
+    height: 20rem;
+  }
+  .modal > h2 {
+    font-size: 0.8rem;
+    margin: 0%;
+    line-height: 2rem;
+    margin-bottom: 1rem;
+  }
+  .modal__form {
+    gap: 1rem;
+    grid-column-gap: 1rem;
+  }
+  label {
+    font-size: 0.8rem;
+    margin: 0;
+  }
+  input {
+    width: 5rem;
+    height: 1rem;
+  }
+  .modal__form > .btn {
+    width: 6rem;
+    height: 2rem;
+    font-size: 0.8rem;
+    margin-left: 2.5rem;
+  }
+}
+/*Login to Acount*/
 .modal__login {
   position: fixed;
   top: 50%;
