--- a/index.css
+++ b/index.css
@@ -44,16 +44,7 @@ ul {
   width: 80%;
   box-sizing: border-box;
 }
-@media (min-width: 600px) {
-  ul {
-    font-size: 1rem;
-  }
-}
-@media (min-width: 1000px) {
-  ul {
-    font-size: 1.2rem;
-  }
-}
+
 li {
   list-style: none;
   margin-right: 10px;
@@ -73,7 +64,25 @@ a {
 .link:hover {
   background-color: #14c03c;
 }
-
+@media (min-width: 600px) {
+  ul {
+    font-size: 1rem;
+  }
+  a {
+    margin: 0 1rem;
+  }
+}
+@media (min-width: 1000px) {
+  ul {
+    font-size: 1.3rem;
+  }
+  a {
+    margin: 1.3rem;
+  }
+  .link {
+    border-radius: 3rem;
+  }
+}
 /* navigation End */
 
 /*header title start */
@@ -98,6 +107,7 @@ img.header__img {
   float: right;
   margin-top: -130%;
   margin-left: 1rem;
+  display: none;
 }
 h1 {
   font-size: 3rem;
@@ -132,7 +142,8 @@ h4 {
 
 @media (min-width: 600px) {
   img.header__img {
-    margin-top: -50vh;
+    display: block;
+    margin-top: -40vh;
   }
   h1 {
     font-size: 3.2rem;
@@ -649,77 +660,147 @@ footer > img {
   transform: translate(-50%, -50%);
   z-index: 2;
   background-color: #f3f3f3;
-  width: 37rem;
-  height: 60%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  width: 80%;
+  height: 40%;
   border-radius: 2rem;
-  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 20% 1fr 15% 5%;
+  grid-template-rows: 10% 20% 10% 1fr;
 }
 
 .modal > button {
-  font-size: 290%;
-  border: none;
   background-color: #f3f3f3;
-  align-self: flex-end;
-  margin-right: 3%;
-  margin-top: 1%;
   cursor: pointer;
+  grid-row: 0/2;
+  grid-column: 3/4;
+  border-radius: 1rem;
+  font-size: 1.3rem;
+  padding: 0%;
+  border: none;
+  margin-top: 0.5rem;
+  margin-right: -0.9rem;
+}
+.modal > button:hover {
+  color: red;
 }
 
 .modal__header {
-  flex-grow: 0;
-  font-size: 200%;
-  line-height: 4rem;
-  margin-top: -5%;
+  font-size: 1rem;
+  line-height: 1.3rem;
+  grid-column: 1/5;
+  grid-row: 2/3;
+  text-align: center;
+  margin: 0%;
+  padding: 0%;
 }
 
 .modal__form {
-  flex: 3;
-  display: grid;
-  grid-template-columns: 70% 1fr;
-  grid-template-rows: repeat(3, 70px);
+  grid-column: 2/3;
+  grid-row: 3/5;
 
+  display: grid;
+  grid-template-columns: 40% 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 0.3rem;
+  justify-content: center;
+  align-items: center;
   box-sizing: border-box;
 }
 
 label {
-  font-size: 160%;
-  margin: 0%;
-  padding: 0%;
+  font-size: 0.8rem;
+  grid-column: 1/2;
 }
 
 input {
-  height: 2.5rem;
-  width: 13rem;
-  margin: 0%;
-  padding: 0%;
-  margin-left: -35%;
-  margin-top: -2%;
-  font-size: 1.5rem;
-  text-indent: 20px;
+  font-size: 0.7rem;
+
+  height: 30%;
+  width: 100%;
+  text-indent: 0.2rem;
   border: none;
+  grid-column: 3/4;
 }
 
 input[type="email"] {
-  font-size: 1rem;
+  font-size: 0.5rem;
 }
 
 .modal__form > .btn {
-  width: 12rem;
-  margin-left: 50%;
-  height: 3.5rem;
-  margin-bottom: 15%;
+  background-color: #f3f3f3;
+
   border: none;
-  font-size: 130%;
+  font-size: 1rem;
   cursor: pointer;
+  grid-column: 1/4;
 }
 
 .modal__form > .btn:hover {
-  background-color: #1fc044;
+  color: #1fc044;
 }
+@media (min-width: 600px) {
+  .modal {
+    width: 60%;
+    height: 40%;
+    grid-template-rows: 10% 20% 15% 1fr;
+  }
+  .modal > button {
+    font-size: 2rem;
+    margin-top: 1rem;
+  }
+
+  .modal__header {
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+  }
+
+  label {
+    font-size: 1rem;
+  }
+  input {
+    grid-column: 2/4;
+    height: 40%;
+    font-size: 0.9rem;
+    text-indent: 0.5rem;
+  }
+  input[type="email"] {
+    font-size: 1rem;
+  }
+  .modal__form > .btn {
+    font-size: 1.2rem;
+  }
+}
+@media (min-width: 1000px) {
+  .modal {
+    width: 50%;
+    height: 50%;
+    grid-template-rows: 10% 20% 15% 1fr;
+  }
+  .modal > button {
+    font-size: 2rem;
+    margin-top: 1rem;
+  }
+
+  .modal__header {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  label {
+    font-size: 1.3rem;
+  }
+  input {
+    grid-column: 2/4;
+    font-size: 1rem;
+  }
+  input[type="email"] {
+    font-size: 1.2rem;
+  }
+  .modal__form > .btn {
+    font-size: 1.5rem;
+  }
+}
+
 /* end of modal */
 .cover {
   position: fixed;
@@ -745,101 +826,4 @@ input[type="email"] {
   opacity: 100;
   transform: translateY(0rem);
   transition-duration: 1s;
-}
-@media (max-width: 600px) {
-  .modal {
-    width: 15rem;
-    height: 20rem;
-  }
-  .modal > h2 {
-    font-size: 0.8rem;
-    margin: 0%;
-    line-height: 2rem;
-    margin-bottom: 1rem;
-  }
-  .modal__form {
-    gap: 1rem;
-    grid-column-gap: 1rem;
-  }
-  label {
-    font-size: 0.8rem;
-    margin: 0;
-  }
-  input {
-    width: 5rem;
-    height: 1rem;
-  }
-  .modal__form > .btn {
-    width: 6rem;
-    height: 2rem;
-    font-size: 0.8rem;
-    margin-left: 2.5rem;
-  }
-}
-/*Login to Acount*/
-.modal__login {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 5;
-  height: 90%;
-  width: clamp(30rem, 80%, 40rem);
-  background-color: whitesmoke;
-  text-align: center;
-  border-radius: 10%;
-}
-.modal__login > .arrow {
-  font-size: 3rem;
-  border: none;
-  background-color: whitesmoke;
-  margin: 0%;
-  margin-left: 80%;
-  margin-top: 3%;
-  cursor: pointer;
-}
-
-.modal__login > h2 {
-  font-size: 2rem;
-  font-weight: lighter;
-  margin: 0%;
-}
-
-.login {
-  width: 80%;
-  height: 80%;
-  margin: auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 50px 50px;
-  row-gap: 50px;
-  column-gap: 80px;
-  font-size: 1rem;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  justify-items: center;
-  margin: 5% auto;
-  margin-top: -15%;
-}
-
-.login > input {
-  border-radius: 10px;
-  border: black 0.1px solid;
-  width: clamp(8rem, 15rem, 17rem);
-}
-
-.modal__login > .log_in {
-  width: 10rem;
-  height: 5rem;
-  font-size: 2rem;
-  border: none;
-  display: block;
-  margin-top: -15%;
-  margin-left: 35%;
-}
-
-.login_next {
-  text-decoration: none;
-  color: black;
 }
